<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/main_background">

    <TextView android:id="@+id/title_game"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="100dp"
              android:text="@string/app_name"
              android:textAllCaps="true"
              android:textSize="45sp"/>

    <TextView android:id="@+id/score_game"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="200dp"
              android:text="@string/finalScore"
              android:textSize="30sp"/>

    <TextView android:id="@+id/goodClicks_game"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="240dp"
              android:text="@string/goodClicks"
              android:textColor="#FFA500"
              android:textSize="20sp"/>

    <TextView android:id="@+id/badClicks_game"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="265dp"
              android:text="@string/badClicks"
              android:textColor="#FFA500"
              android:textSize="20sp"/>

    <TextView android:id="@+id/accuracy_game"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="290dp"
              android:text="@string/accuracy"
              android:textColor="#FFA500"
              android:textSize="20sp"/>

    <TextView android:id="@+id/totalVitamins_game"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:layout_alignParentTop="true"
              android:layout_centerHorizontal="true"
              android:layout_marginTop="320dp"
              android:text="@string/newVitamins"
              android:textColor="#FFA500"
              android:textSize="30sp"/>

    <com.facebook.share.widget.ShareButton android:id="@+id/fb_share_button"
        android:layout_width="200dp"
        android:layout_height="40dp"
        android:textSize="20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="380dp"/>

    <RelativeLayout
            android:id="@+id/button_menu"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="450dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true">

        <ImageView
                android:id="@+id/img_button"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:scaleType="fitXY"
                android:src="@drawable/button"/>

        <TextView
                android:id="@+id/text_menu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:gravity="center_horizontal"
                android:text="@string/backMenu"
                android:textSize="20sp"
                android:textColor="#000099"
                android:textAppearance="?android:attr/textAppearanceMedium"/>
    </RelativeLayout>


</RelativeLayout>